[package]
name = "terrustia"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.3.1"
bevy = { version = "0.16.0", features = ["bmp"] }
round-to = "0.1.5"

# Enable small optimizations for local code
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
